# ml-stocks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_REVIEW.md  Dockerfile  IMPROVEMENTS.md  README.md  RUNBOOK.md  TODO.md  cli.py  config.py  download_finance_data.py  download_finanse_data.py  process_data.py  pyproject.toml  test_model.py  train_model.py  tune_model.py
.github/workflows/: manual-review-findings.yml  test.yml  train-and-deploy.yml
docs/: index.html
scripts/: generate_report.py
src/: __init__.py  exceptions.py  validators.py
src/backtest/: __init__.py  metrics.py  signal_filter.py  simulator.py  strategy.py
src/data/: __init__.py  downloader.py  features.py
src/model/: __init__.py  base_trainer.py  data_splitter.py  evaluator.py  model_factory.py  model_repository.py  trainer.py  tuner.py
src/utils/: __init__.py  helpers.py  logger.py  visualization.py
tests/: __init__.py  conftest.py  test_data_splitter.py  test_evaluator.py  test_features.py  test_helpers.py  test_metrics.py  test_model_factory.py  test_model_repository.py  test_signal_filter.py  test_simulator.py  test_strategy.py  test_trainer.py  test_trainer_patterns.py  test_tuner.py  test_validators.py
